--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Prueba GIT</title>
 </head>
 <body>
-    
+    <h5>prueba al modo remoto</h5>
     <h3>hola mamacita</h3>
 </body>
 </html>
